# regrid

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/before_after/: README.md
refs/: tile_21_1x1.stl
samples/: README.md  RuggedOrganizer_Gridfinity.stl  gridfinity_bin_42mm.stl  sample_42_1x1.stl
scripts/: generate_gridfinity_bin.py  generate_sample_bin.py  run_e2e_tests.py
src/regrid/: __init__.py  __main__.py  boolean.py  cli.py  cut.py  detect.py  pipeline.py  tile.py  verify.py
tests/: README.md  TEST_HARNESS.md  conftest.py  test_e2e.py  test_floor_detection.py  test_pipeline.py  test_preserve_floor.py
